Tests/Modules/Error/GoalFirst/.build/alwaysfails.pr
{
  "name": "AlwaysFails",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "add 1 to %goalFirstAttempts%, write to %goalFirstAttempts%",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "math",
          "action": "add",
          "parameters": [
            {
              "name": "A",
              "value": "%goalFirstAttempts%",
              "type": "object"
            },
            {
              "name": "B",
              "value": 1,
              "type": "object"
            }
          ],
          "defaults": null,
          "modifiers": []
        },
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%goalFirstAttempts%",
              "type": "string"
            },
            {
              "name": "Value",
              "value": "%!data%",
              "type": "object"
            }
          ],
          "defaults": null,
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": null,
      "source": null,
      "waitForExecution": true
    },
    {
      "index": 1,
      "text": "throw error \u0022always fails\u0022",
      "lineNumber": 3,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "error",
          "action": "throw",
          "parameters": [
            {
              "name": "Message",
              "value": "always fails",
              "type": "string"
            }
          ],
          "defaults": [
            {
              "name": "statuscode",
              "value": 500,
              "type": "int"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": "This step unconditionally throws an error with the provided message, failing the step/goal.",
      "level": "high",
      "confidence": 99,
      "formal": null,
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/GoalFirst/AlwaysFails.goal",
  "prPath": "/Modules/Error/GoalFirst/.build/alwaysfails.pr",
  "hash": "20452d6d06df8961ba441d4dc18fc37c2e6dd04b2658568f70fb8b95f341268d",
  "builderVersion": "0.2.2",
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}